--- a/package.json
+++ b/package.json
@@ -7,24 +7,42 @@
     "dev": "vite",
     "backend": "node server/server.cjs",
     "build": "tsc -b && vite build",
+    "build:web": "vite build",
+    "serve": "vite preview",
+    "capacitor:sync": "npx cap sync",
+    "capacitor:open:android": "npx cap open android",
+    "capacitor:build:android": "npm run build && npx cap sync android && npx cap open android",
+    "generate:icons": "node scripts/generate-icons.cjs",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
+    "dexie": "^3.2.3",
+    "msw": "^1.2.1",
+    "workbox-window": "^6.5.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-plugin-pwa": "^0.17.0",
+    "workbox-cli": "^6.5.4"
   }
 }
