fix(api): remove hardcoded Origin header from API requests

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,7 +4,13 @@
   "webDir": "dist",
   "server": {
     "androidScheme": "https",
-    "cleartext": true
+    "cleartext": true,
+    "hostname": "app"
+  },
+  "plugins": {
+    "CapacitorHttp": {
+      "enabled": true
+    }
   },
   "android": {
     "allowMixedContent": true,
