--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@coreui/vue-chartjs": "^3.0.0",
     "@popperjs/core": "^2.11.8",
     "@zxing/library": "^0.20.0",
-    "axios": "^1.12.2",
+    "axios": "1.13.5",
     "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
     "simplebar-vue": "^2.4.2",
@@ -51,7 +51,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "sass": "^1.90.0",
-    "vite": "^7.1.0",
+    "vite": "7.1.11",
     "vite-plugin-pwa": "^1.1.0"
   }
 }
